# ShotMemory

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  README_EN.md  biome.json  claude.md  docker-compose.yml  dump.rdb  pyproject.toml  spec.md
backend/: Dockerfile  LICENSE  alembic.ini  main.py  practice.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_01_21_1853-59147e544ca1_init_auth_tables.py  2026_03_07_1908-cbe9f2e28ac5_init_database.py  2026_03_09_0345-533f734c8506_rename_location_to_location_wkt_and_.py  2026_03_15_0049-aac0445c6189_add_avatar_key_to_user.py  2026_03_15_0338-f225db269af0_add_video_key_to_photo.py  2026_03_15_0500-a1b2c3d4e5f6_replace_keys_with_has_video.py  2026_03_17_0100-b2c3d4e5f6a7_add_sort_order_to_m2m.py  2026_04_20_1648-9f7e6d5c4b3a_allow_device_id_reuse_across_users.py
backend/core/: __init__.py  all_models.py  base_code.py  base_model.py  base_schema.py  config.py  custom_exception.py  database.py  exception_handler.py  exceptions.py  logger.py  root_router.py  security.py  unify_response.py  worker.py
backend/core/storage/: __init__.py  aliyun.py  interface.py  local.py
backend/middlewares/: logger_middleware.py
backend/scripts/: cleanup_orphan_thumbnails.py  rename_thumbnails.py  rename_videos.py  reparse_exif.py  transcode_existing_videos.py
backend/services/auth/: exceptions.py
backend/services/auth/models/: __init__.py  refresh_token_model.py  user_model.py
backend/services/auth/repos/: __init__.py  refresh_token_repo.py  user_repo.py
backend/services/auth/routers/: __init__.py  auth_router.py  user_deps.py
backend/services/auth/schemas/: __init__.py  token_schema.py  user_schema.py
backend/services/auth/utils/: token_util.py
backend/services/photo_story/: __init__.py  exceptions.py
backend/services/photo_story/models/: __init__.py  photo_model.py  photo_story_m2m.py  story_model.py  story_photo_m2m.py
backend/services/photo_story/repos/: __init__.py  photo_repo.py  story_repo.py
backend/services/photo_story/routers/: __init__.py  photo_router.py  story_router.py  upload_router.py
backend/services/photo_story/schemas/: __init__.py  exif_schema.py  photo_schema.py  story_schema.py
backend/tests/: README.md  conftest.py  locustfile.py  test_concurrent.py  test_uploads.py
backend/utils/: time_util.py
(+72 files in other folders)
